--- a/src/views/error.html
+++ b/src/views/error.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>404 Page Not Found</title>
   <link rel="shortcut icon" type="image/png" href="err.png" async/>
-  <link rel="stylesheet" href="bscreen.css">
+  <link rel="stylesheet" href="bscreen.css"/>
 
 </head>
 <body>
@@ -31,7 +31,7 @@
   </div>
 </div>
 <!-- partial -->
-  <script  src="bscreen.js"></script>
+<script  src="bscreen.js"></script>
 
 </body>
 </html>
