--- a/src/views/assets/main-page.css
+++ b/src/views/assets/main-page.css
@@ -8,6 +8,67 @@
     top: 0px;
     right: 0px;	
 	}
+	.invite{
+		position:relative; 
+		padding-top: 15px; 
+		padding-left: 250px; 
+		padding-bottom: 50px;
+	}
+	.invitef{
+		position:relative; 
+		padding-left:200px; 
+		padding-top:25px;
+	}
+	.something{
+		color: rgb(140, 0, 255)
+	}
+	.replit{
+		color: rgb(87, 89, 93)
+	}
+	.credits{
+		position: absolute;
+		bottom: 1px;
+		right: 1px;	
+		}
+
+		.donate .bmc-button img{
+			width: 27px !important;
+			margin-bottom: 1px !important;
+			box-shadow: none !important;
+			border: none !important;
+			vertical-align: middle !important;
+		}
+		.donate .bmc-button{
+			line-height: 36px !important;
+			height:37px !important;
+			text-decoration: none !important;
+			display:inline-flex !important;
+			color:#000000 !important;
+			background-color:#ff0000 !important;
+			border-radius: 3px !important;
+			border: 1px solid transparent !important;
+			padding: 1px 9px !important;
+			font-size: 23px !important;
+			letter-spacing: 0.6px !important;
+			box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) !important;
+			-webkit-box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.5) !important;
+			margin: 0 auto !important;
+			font-family:'Cookie', cursive !important;
+			-webkit-box-sizing: border-box !important;
+			box-sizing: border-box !important;
+			-o-transition: 0.3s all linear !important;
+			-webkit-transition: 0.3s all linear !important;
+			-moz-transition: 0.3s all linear !important;
+			-ms-transition: 0.3s all linear !important;
+			transition: 0.3s all linear !important;
+		}
+		.donate .bmc-button:hover, .donate .bmc-button:active, .donate .bmc-button:focus {
+			-webkit-box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.5) !important;
+			text-decoration: none !important;
+			box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.5) !important;
+			opacity: 0.95 !important;
+			color:#ffffff !important;
+		}
 
     body {
       background: var(--bs-gray-dark);
@@ -20,7 +81,7 @@
 
     .hero {
 	position:relative; 
-	right:500px;	
+	padding-right:500px;	
       margin-top: 5%;
     }
 
@@ -32,7 +93,7 @@
 	
 
     .commands {
-      margin-top: 100px;
+      margin-top: 0px;
     }
 
     .commands .title {
